# rust-aws-sso-tui

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  aws.rs  errors.rs  main.rs  pages.rs  sso.rs  utils.rs  widgets.rs
src/aws/: account_info_provider.rs  cli.rs  token.rs  token_cache.rs
src/pages/: accounts.rs  config.rs  credentials.rs  page.rs  roles.rs
src/utils/: json.rs  serde.rs
src/widgets/: accounts.rs  config.rs  credentials.rs  roles.rs
